--- a/patient/login.html
+++ b/patient/login.html
@@ -41,7 +41,7 @@
 </head>
 <body>
 
-  <a href="../home.html" class="previous"><span style="font-size:30px; justify-content: center;"><b>&#8249;</b></span></a>
+  <a href="../home.php" class="previous"><span style="font-size:30px; justify-content: center;"><b>&#8249;</b></span></a>
   
 
     <div class="container">
@@ -56,6 +56,7 @@
                     </div>
 
                     <form method="post" action="login_patient.php">
+                      <input type="hidden" id="idpatient">
                       <div class="form-floating mb-3">
                         <input type="email" class="form-control form-control-sm" placeholder="Email" id="email" name="email" style="border-radius: 1rem;">
                         <label for="email">Email</label>
@@ -92,10 +93,10 @@
   
         <div class="me-md-auto text-center text-md-start" style="display: flex; align-items: center;">
           <div class="copyright">
-            &copy; Copyright <strong><span>MyHealth</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Gestion_RDV</span></strong>. Tous Droits Réservés
           </div>
           <div style="display: inline-block; margin-left: 860px;">
-            Need Help ? <a href="mailto:myhealth@gmail.com">Contact us</a>
+            Besoin d'aide ? <a href="mailto:admin@gmail.com">Contactez_Nous</a>
           </div>
         </div>
         
