--- a/admin/login.html
+++ b/admin/login.html
@@ -44,14 +44,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand fs-3 fw-bold" href="../home.html" >HomePage</a>
+      <a class="navbar-brand fs-3 fw-bold" href="../home.php" >HomePage</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNavDropdown">
         <ul class="navbar-nav ms-auto fs-5">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../home.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../home.php">Home</a>
           </li>
         </ul>
       </div>
@@ -69,8 +69,8 @@
                     </div>
                     <form method="post" action="login_admin.php">
                         <div class="form-floating mb-3">
-                            <input type="email" class ="form-control form-control-sm" placeholder="email" id="floatingInput" name="T1">
-                            <label for="floatingInput">email</label>
+                            <input type="login" class ="form-control form-control-sm" placeholder="login" id="floatingInput" name="T1">
+                            <label for="floatingInput">login</label>
                         </div>
                         <div class="form-floating mb-3">
                             <input type="password" class ="form-control form-control-sm" placeholder="Password" name="T2" id="floatingPassword">
